<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <cz.cvut.kbss.jopa.version>2.3.1</cz.cvut.kbss.jopa.version>
    </properties>
    <groupId>it.unict.gallosiciliani</groupId>
    <artifactId>liphtools</artifactId>
    <version>2.5.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>liph</module>
        <module>derivations</module>
        <module>gs</module>
        <module>sicilian</module>
        <module>importing</module>
        <module>projects</module>
        <module>webapp</module>
        <module>pdfimporter</module>
        <module>csvimporter</module>
        <module>sicilian-derivationbuilder</module>
        <module>gs-derivationsimporter</module>
        <module>gs-derivationsextractor</module>
        <module>liph-validator</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.10.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.12.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.14.0</version>
        </dependency>
        <!-- see https://central.sonatype.com/artifact/cz.cvut.kbss.jopa/jopa-all -->
<!--        <dependency>-->
<!--            <groupId>org.slf4j</groupId>-->
<!--            <artifactId>slf4j-api</artifactId>-->
<!--            <version>2.0.16</version>-->
<!--        </dependency>-->
        <!-- see https://central.sonatype.com/artifact/cz.cvut.kbss.jopa/jopa-all -->
<!--        <dependency>-->
<!--            <groupId>ch.qos.logback</groupId>-->
<!--            <artifactId>logback-classic</artifactId>-->
<!--            <version>1.5.6</version>-->
<!--        </dependency>-->
    </dependencies>
</project>